@startuml

class IEmployee {
  +name: string
  +getBonus(base:number)
}

class JuniorEmployee {
  +name:string
  +getBonus(base:number)
}

class MiddleEmployee {
  +name:string
  +getBonus(base:number)
}

class SeniorEmployee {
  +name:string
  +getBonus(base:number)
}

JuniorEmployee ---> IEmployee
MiddleEmployee ---> IEmployee
SeniorEmployee ---> IEmployee

@enduml
